# Simple-Threading-Profiler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  client.js
ThreadingProfiler/: .clang-format  .env  .gitignore  CMakeLists.txt
ThreadingProfiler/core/: event_type.hpp  global_initializer.cpp
ThreadingProfiler/core/concurrency/: mpsc_queue.hpp
ThreadingProfiler/core/event/: deadlock_event.cpp  event.hpp  event_queue.cpp  event_queue.hpp  event_types.hpp  mutex_event.cpp  mutex_event.hpp  thread_event.cpp  thread_event.hpp
ThreadingProfiler/core/interpose/: mutex_interpose.cpp  pthread_interpose.cpp
ThreadingProfiler/core/logger/: logger.cpp  logger.hpp  logger_interface.hpp  tcp_logger.cpp  tcp_logger.hpp
ThreadingProfiler/core/profiler/: global_tracker.cpp  global_tracker.hpp  profiler.cpp  profiler.hpp
ThreadingProfiler/core/utils/: timestamp.hpp
ThreadingProfiler/include/logging/: FileLogger.hxx  ILogger.hxx  LogType.hxx  Logger.hxx  TCPLogger.hxx  log_entities.hxx  log_message.hxx  log_types.hxx
ThreadingProfiler/src/: interpose.cxx  profiler_initializer.cxx
ThreadingProfiler/src/interpose/: mutex_interpose.cxx  threads_interpose.cxx
ThreadingProfiler/src/logging/: FileLogger.cxx  Logger.cxx  TCPLogger.cxx
core/: config.hpp  global_initializer.cpp  profiler_tls.cpp  profiler_tls.hpp
core/event/: deadlock_event.cpp  deadlock_event.hpp  event.hpp  event_queue.cpp  event_queue.hpp  event_types.hpp  mutex_event.cpp  mutex_event.hpp  thread_event.cpp
core/interpose/: mutex_interpose.cpp  pthread_interpose.cpp
core/logger/: logger.cpp  logger.hpp  logger_interface.hpp  tcp_logger.cpp  tcp_logger.hpp
core/profiler/: global_tracker.cpp  global_tracker.hpp  mpsc_queue.cpp  mpsc_queue.hpp  profiler.cpp  profiler.hpp
core/utils/: utils.hpp
tests/: base_deadlock.cpp  base_mutex_threads.cpp  base_mutex_threads.cxx  base_threads.cpp  base_threads.cxx  deadlock.cpp  mutex_threads.cpp  threads.cpp
